Fix columns layout issue

--- a/web/assets/css/app.css
+++ b/web/assets/css/app.css
@@ -528,7 +528,7 @@ label.label-normal {
 .wq-main-columns {
     column-width: 200px;
     width: 1100px;
-    height: 520px;
+    height: 550px;
     padding: 20px;
 }
 
